# hoglah

./: .gitignore  .restart.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture-decisions.md  domains-registry-full-DOMAINS.md  domains-registry-full-domains.json  domains-registry-update.md  kafka-bridge-design.md  project-brief.md  rabbitmq-bridge-design.md  requirements-v1.0.md
examples/: basic_usage.py
okf/: index.md
okf/cli/: daemons.md  index.md  inspect.md  submit.md
okf/concepts/: crash-safety.md  decoupled-topology.md  index.md  job-kinds.md  result-delivery.md
okf/modules/: adapters.md  client.md  index.md  messaging-bridges.md  messaging-submitter.md  models.md  storage.md
scripts/: test_packaged_install.py
src/hoglah/: __init__.py  adapters.py  cli.py  client.py  config.py  dispatch.py  kafka_bridge.py  manifest.py  messaging_submitter.py  models.py  mongo_store.py  priority_queue.py  py.typed  rabbitmq.py  redis_streams.py  store.py
tests/: __init__.py  test_client_basic.py  test_dispatch.py  test_kafka_bridge.py  test_manifest.py  test_messaging_submitter.py  test_mongo_store.py  test_priority_queue.py  test_rabbitmq.py  test_redis.py  test_worker_execution.py
