[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hoglah"
version = "0.2.1"
description = "Lightweight local-first job queue manager and Ollama wrapper for resource-constrained environments."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "gellsmore-svg"},
]
keywords = [
    "ollama",
    "llm",
    "queue",
    "job-queue",
    "local-first",
    "async",
    "agentic",
    "background-tasks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "ollama>=0.3",  # official ollama python client
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
]
cli = [
    "typer>=0.12",   # nice CLI; can fall back to argparse if preferred
]

[project.scripts]
hoglah = "hoglah.cli:main"  # typer app via wrapper

[project.urls]
Homepage = "https://github.com/gellsmore-svg/hoglah"
Repository = "https://github.com/gellsmore-svg/hoglah"
Issues = "https://github.com/gellsmore-svg/hoglah/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hoglah = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
